Update to 26.3 Changed Pulsar Blades animation Creaitve players no longer need to have reagents in their inventory when doing Aequalis Transmutations Fixed a bug where Stardust sometimes doesnt stack with itself